// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StyledMessage /> should style the component on valid props 1`] = `
.c0 {
  font-size: 1.25rem;
}

<span
  className="c0"
/>
`;

exports[`<StyledMessage /> should style the component on valid props 2`] = `
.c0 {
  color: #f44336;
  font-size: 1.25rem;
}

<span
  className="c0"
/>
`;

exports[`<StyledMessage /> should style the component on valid props 3`] = `
.c0 {
  color: #9e9e9e;
  font-size: 1.25rem;
}

<span
  className="c0"
/>
`;

exports[`<StyledMessage /> should style the component on valid props 4`] = `
.c0 {
  color: #4caf50;
  font-size: 1.25rem;
}

<span
  className="c0"
/>
`;

exports[`<StyledMessage /> should style the component on valid props 5`] = `
.c0 {
  color: #ffeb3b;
  font-size: 1.25rem;
}

<span
  className="c0"
/>
`;
